# ankichess

./: .gitignore  README.md  angular.json  package-lock.json  package.json
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: card.rs  database.rs  deck.rs  import.rs  mod.rs
src-tauri/src/models/: bootstrap.rs  card.rs  deck.rs  lichessdb.rs  mod.rs  puzzle.rs
src-tauri/src/repository/: mod.rs  puzzle_repo.rs
src-tauri/src/services/: deck_service.rs  import_service.rs  lichessdb_service.rs  mod.rs  note_service.rs
src-tauri/src/shared/: utils.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/core/models/: card.models.ts  db.models.ts  deck.models.ts
src/app/core/services/: audio.service.ts  db-state.service.ts  tauri.service.ts
src/app/core/views/database-fab/: database-fab.component.css  (+2 more)
src/app/features/card-form/: card-form.component.css  card-form.component.html  card-form.component.ts
src/app/features/deck-browse/: app-browse-cards.css  app-browse-cards.html  app-browse-cards.ts
src/app/features/deck-list/: app-deck-list.css  app-deck-list.html  app-deck-list.ts
src/app/features/deck-settings/: app-deck-settings.css  app-deck-settings.html  app-deck-settings.ts
src/app/features/deck-study/: app-study.css  app-study.html  app-study.ts
src/app/shared/pipes/: format-seconds.pipe.ts  text.pipe.ts
src/assets/: chessground.css
src/assets/styles/: ui.css
(+22 files in other folders)
