[package]
name = "ankichess"
version = "0.1.0"
description = "ankichess"
authors = ["Daniele Luca"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ankichess_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] } #"devtools" 
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "serde"] }
#anki = { path = "../src-anki/rslib" }
#anki_proto = { path = "../src-anki/rslib/proto" }
anki = { git = "https://github.com/ankitects/anki.git", rev = "c2fddcaf42716682c46880b0d1bf7cb477674e27" }
anki_proto = { git = "https://github.com/ankitects/anki.git", rev = "c2fddcaf42716682c46880b0d1bf7cb477674e27" }
regex = "1.12.2"

quick-xml = "0.31"
csv = "1.3"
zstd = "0.13"

rusqlite = { version = "0.36.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
futures-util = "0.3"
tauri-plugin-dialog = "2"


[dev-dependencies]
tempfile = "3.23.0"
